--- a/config.toml.example
+++ b/config.toml.example
@@ -1,8 +1,3 @@
-# 目标用户配置
-[users]
-# 需要处理消息的用户ID列表
-target_users = []
-
 # API配置
 [api]
 # 和风天气API密钥
@@ -13,3 +8,28 @@ qweather_key = "your-qweather-key"
 api_key = "your-api-key"
 base_url = "https://api.openai.com/v1"  # 可选，默认使用 OpenAI 官方 API
 model = "gpt-3.5-turbo"  # 默认使用的模型名称
+
+# 用户配置
+[users]
+bot_id = 366421915
+# 允许使用机器人的用户ID列表
+allowed_users = [
+    12345678,  # 用户1
+    87654321   # 用户2
+]
+
+# 群组配置
+[[groups]]
+id = 11111111  # 群组ID
+at_only = true  # 是否只响应@消息
+allowed_users = [  # 该群组中允许使用机器人的用户ID，为空表示允许所有用户
+    12345678,
+    87654321
+]
+
+[[groups]]
+id = 22222222
+at_only = false
+allowed_users = []  # 空列表表示允许群内所有用户使用
+
+# 可以继续添加更多群组配置...
