feat: support group black list

--- a/config.toml.example
+++ b/config.toml.example
@@ -12,7 +12,7 @@ model = "gpt-3.5-turbo"  # 默认使用的模型名称
 # 用户配置
 [users]
 bot_id = 366421915
-# 允许使用机器人的用户ID列表
+# 允许私聊使用机器人的用户ID列表
 allowed_users = [
     12345678,  # 用户1
     87654321   # 用户2
@@ -26,10 +26,15 @@ allowed_users = [  # 该群组中允许使用机器人的用户ID，为空表示
     12345678,
     87654321
 ]
+black_list = [  # 该群组的黑名单用户
+    33333333,
+    44444444
+]
 
 [[groups]]
 id = 22222222
 at_only = false
-allowed_users = []  # 空列表表示允许群内所有用户使用
+allowed_users = []  # 空列表表示允许群内所有非黑名单用户使用
+black_list = []  # 空列表表示没有黑名单用户
 
 # 可以继续添加更多群组配置...
